--- a/src/components/shared/Header.css
+++ b/src/components/shared/Header.css
@@ -1,14 +1,16 @@
 header {
     line-height: 0.5rem;
+
 }
 
 h1 {
     font-size: 1.1rem;
     font-weight:500;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: italic;
     font-size: 1rem;
 }
