--- a/src/components/shared/Header.css
+++ b/src/components/shared/Header.css
@@ -1,10 +1,14 @@
 header {
-    line-height: 0.5rem;
+    line-height: 0.3rem;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
 
 }
 
 h1 {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight:500;
     font-family: Arial, Helvetica, sans-serif;
 }
