--- a/src/index.css
+++ b/src/index.css
@@ -32,10 +32,16 @@ html, body {
   overflow: hidden;
 }
 
+#loader {
+  display: flex;
+  flex-direction: column;
+}
+
 main {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
   height: 100vh;
   width: 100%;
   overflow: hidden;
