--- a/src/loader.css
+++ b/src/loader.css
@@ -50,6 +50,28 @@
   #loader form button:hover {
     background-color: #0056b3;
   }
+
+  #demo {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  #demo:hover {
+    background-color: rgb(0, 75, 0);
+
+  }
   
   /* Fixture list styles */
   #loader ul {
@@ -59,6 +81,7 @@
   }
   
   #loader ul li {
+    width: 100%;
     margin-bottom: 10px;
   }
   
