--- a/src/components/timeline/Timeline.css
+++ b/src/components/timeline/Timeline.css
@@ -11,102 +11,17 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  height: 100%;
   overflow: hidden;
 }
 
-
-/* nav buttons overlay */
-
-.menu  {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  pointer-events: none;
-}
-
-.menu input[type="button"] {
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease-out, visibility 0s 0.3s;
-}
-
-.timelineContainer:hover .menu input[type="button"] {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-  transition: opacity 0s, visibility 0s;
-}
-
-.navButtons {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.zoomButtons {
-  z-index: 9999;
-  position: absolute;
-  margin-top:2px;
-}
-
-.navButton {
-  cursor: pointer;
-}
-
-.navButtonContainer {
-  position: absolute;
-  height: 100%;
-  align-content: center;
-  z-index: 9998;
-  pointer-events: auto;
-}
-
-.navButtonContainer#left {
-  left: 0;
-  background: linear-gradient(to right, black 0%, transparent 100%);
-}
-
-.navButtonContainer#right {
-  right: 0;
-  background: linear-gradient(to left, black 0%, transparent 100%);
-}
-
-input[type="button"] {
-  z-index: 9999;
-  background-size: contain; /* Ensure the image fits inside the button */
-  background-repeat: no-repeat; /* Prevent the image from repeating */
-  background-position: center; /* Center the icon inside the button */
-  background-color: transparent;
-  border: none; /* Remove the default border */
-  width: 30px; /* Adjust the width to match the icon size */
-  height: 30px; /* Adjust the height to match the icon size */
-  cursor: pointer; /* Show pointer cursor on hover */
-}
-
-#moveLeft {
-  background-image: url('../../assets/left_arrow.png');
-}
-
-#moveRight {
-  background-image: url('../../assets/right_arrow.png');
-}
-
-#zoomIn {
-  background-image: url('../../assets/zoomIn.png');
-}
-
-#zoomOut {
-  background-image: url('../../assets/zoomOut.png');
-}
-
-#fit {
-  background-image: url('../../assets/fit.png');
+#timelineContainer {
+  position: fixed!important;
+  top: 0!important;
+  left: 0!important;
+  right: 0!important;
+  bottom: 30px!important;
+  z-index: 0!important;
+  overflow: hidden!important;
 }
 
 
