--- a/src/components/timeline/Timeline.css
+++ b/src/components/timeline/Timeline.css
@@ -112,6 +112,14 @@ border: 1px solid !important;
   transition: none;
 }
 
+.vis-item.hovered,
+.vis-dot.hovered {
+  border-color: aqua!important;
+  box-shadow: 0px 0px 10px 5px rgba(0, 255, 255, 0.45);
+  cursor: pointer;
+  transition: none;
+}
+
 .vis-dot-hovered[data-id] {
   background-color: aqua!important;
 }
