--- a/src/components/timeline/Timeline.css
+++ b/src/components/timeline/Timeline.css
@@ -198,3 +198,54 @@ won't need to do that when template functions are added to the component*/
   pointer-events: auto;
   visibility: visible;
 }
+
+.move-left {
+  background-image: url('../../assets/left_arrow.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+
+.move-right {
+  background-image: url('../../assets/right_arrow.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.zoom-in {
+  background-image: url('../../assets/zoomIn.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.zoom-out {
+  background-image: url('../../assets/zoomOut.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+
+.fit {
+  background-image: url('../../assets/fit.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
